--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
         <h1>Etiam feugiat</h1>
     </header>
 
-    
+    <section class="blog">
+        <div class="container">
+            <article>
+                <img src="./img/img1.jpg" alt="">
+                <h3>Lorem ipsum dolor sit</h3>
+                <hr>
+                <h2>Lorem, ipsum dolor</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae est a nulla eligendi esse consectetur ipsam et. Necessitatibus ad repellat omnis beatae incidunt nesciunt nam odit? Exercitationem consectetur magni placeat.</p>
+                <button>learn more</button>
+            </article>
+            <article>
+                <img src="./img/img2.jpg" alt="">
+                <h3>Lorem ipsum dolor sit</h3>
+                <hr>
+                <h2>Lorem, ipsum dolor</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae est a nulla eligendi esse consectetur ipsam et. Necessitatibus ad repellat omnis beatae incidunt nesciunt nam odit? Exercitationem consectetur magni placeat.</p>
+                <button>learn more</button>
+            </article>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
