gallery html css

--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
         </div>
     </section>
 
+    <section class="about">
+        <h3>Lorem ipsum dolor sit orem ipsum dolor sit</h3>
+        <hr>
+        <h2>Lorem ipsum </h2>
+    </section>
+
+    <section class="gallery">
+        <h3>Lorem ipsum dolor sit orem ipsum dolor sit</h3>
+        <h2>Lorem ipsum </h2>
+        <div class="container">
+            <img src="./img/img3.jpg" alt="">
+            <img src="./img/img4.jpg" alt="">
+            <img src="./img/img5.jpg" alt="">
+            <img src="./img/img6.jpg" alt="">
+        </div>
+    </section>
+
 
 </body>
 
